# uv-metadata

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini  uv-metadata-spec.md  uv_metadata.py
.claude/: CLAUDE.md  settings.json
.github/workflows/: release.yml  tests.yml
tests/: conftest.py  requirements.txt  test_cli.py
tests/sample-dist/: uv_metadata-1.0.0-py3-none-any.whl
